# mercaderias.microservice

./: Dockerfile  README.md
app/: .env  dependencies.py  main.py  pyproject.toml  requirements.txt
app/routers/: router.py
